--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+:root {
+  --white-color: #ffffff;
+  --light-gray-one-color: #f8f9fa;
+  --light-gray-two-color: #dbdbdb;
+  --light-gray-three-color: #e0e0e0;
+  --black-color: #000000; 
+  --light-blue-color: #00B4D8;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body,
+html {
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
-.App-header {
-  background-color: #282c34;
+body {
+  font-family: 'Poppins', sans-serif;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.middle {
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  display: inline;
 }
