Mengirim project fullstack pembaruan UI elegan part-1

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 :root {
   --white-color: #ffffff;
-  --light-gray-one-color: #e3e6e9;
+  --light-gray-one-color: #F0F0F0;
   --light-gray-two-color: #dbdbdb;
   --light-gray-three-color: #e0e0e0;
   --black-color: #000000; 
