Mengirim perubahan UI Loader dan Responsive Navbar dan Card part-2

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
   --light-gray-three-color: #e0e0e0;
   --black-color: #000000; 
   --light-blue-color: #00B4D8;
+  --dark-blue-color: #3E497A;
 }
 
 * {
