--- a/client/src/components/CardHome/CardHome.css
+++ b/client/src/components/CardHome/CardHome.css
@@ -1,6 +1,6 @@
 /* Card */
 .card-radius {
-    width: 18rem;
+    width: 100%;
     border-radius: 24px;
     text-align: start;
     border: none;
