--- a/client/src/pages/NotFound/NotFound.css
+++ b/client/src/pages/NotFound/NotFound.css
@@ -1,8 +1,4 @@
 .not-found {
-    width: 500px;
+    width: 100%;
     margin-top: 15%;
-    display: flex;;
-    align-items: center;
-    justify-content: center;
-    object-position: center;
 }
