--- a/client/src/components/CardHome/CardHome.css
+++ b/client/src/components/CardHome/CardHome.css
@@ -1,6 +1,6 @@
 /* Card */
 .card-radius {
-    width: 100%;
+    max-width: 100%;
     border-radius: 24px;
     text-align: start;
     border: none;
@@ -41,6 +41,10 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
+}
+
+.text-category {
+    font-size: 14px;
 }
 
 .side-by-side {
