--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
 }
 
+/* NAVBAR */
 .container {
   width: 100%;
   height: 100vh;
@@ -46,6 +47,8 @@
   font-size: 17px;
 }
 
+/* TEXTHEADING */
+
 section.bear {
   display: flex;
   width: 100%;
@@ -68,74 +71,72 @@ section.bear {
   position: absolute;
   top: 200px;
   left: 0;
-  display: flex;
+  display: grid;
   z-index: 0;
   max-width: 680px;
   max-height: 720px;
   width: auto;
   height: auto;
 }
-section.about {
-  width: 100%;
-  height: 110vh;
-}
-.about-heading {
-  width: 40%;
-  height: 30vh;
-  display: flex;
-  justify-content: center;
-  margin-left: 410px;
-  font-size: 27px;
-  color: #00636a;
-  flex-direction: column;
-  align-items: center;
+
+/* ABOUT */
+
+:root {
+  --clr-primary: #651fff;
+  --clr-gray: #37474f;
+  --clr-gray-light: #b0bec5;
 }
 
-.about-heading p {
-  color: #00636a;
-  margin-top: 50px;
-  font-size: 20px;
-  text-align: center;
+* {
+  box-sizing: border-box;
+  /* font-family: "Open Sans", sans-serif; */
+  margin: 0;
+  padding: 0;
 }
 
-.row {
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
+body {
+  color: var(--clr-gray);
+  margin: 2rem;
+}
+
+.wrapper-grid {
   display: grid;
-  align-content: start;
-  position: absolute;
-  justify-items: center;
-  /* justify-items: stretch; */
+  grid-template-columns: repeat(auto-fit, 20rem);
+  justify-content: center;
 }
-.col {
-  align-items: center;
-  /* justify-content: space-between; */
-  margin: 10px;
-  padding: 10;
-  left: 380px;
-}
-
-.col p1 {
-  font-size: 20px;
-  color: #00636a;
-  position: absolute;
-  right: 53px;
-  top: 150px;
-  width: 60%;
-
+.container-text-about{
+  width: 100%;
+  height: 50vh;
   text-align: center;
-  z-index: 1;
+
 }
-.col img {
-  max-width: 168px;
-  max-height: 300px;
-  display: flex;
-  z-index: 0;
-  right: 100px;
-  grid-gap: 10px;
-  width: auto;
-  height: auto;
+
+.container-about {
+  overflow: hidden;
+  box-shadow: 0px 2px 8px 0px var(--clr-gray-light);
+  background-color: white;
+  text-align: center;
+  border-radius: 1rem;
+  position: relative;
+  margin: 0.5rem;
+  
 }
+
+.banner-img{
+  position: absolute;
+  /* background-image: url('../assets/img/cart.png') , url('../assets/img/buy.png') center bottom , url('../ assets/img/consul.png') ; */
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
+  
+}
+
+.description {
+  margin: 1rem 2rem;
+  font-size: 25px;
+}
+
 
 .nurse img {
   max-width: 512px;
@@ -143,20 +144,7 @@ section.about {
 
   left: 20px;
 }
-.facilities {
-  width: 20%;
-  height: 30%;
-  border-radius: 20px;
-  background: #fff;
-  border: 1px solid #3a4342;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.14);
-}
 
-.form-box {
-  width: 416px;
-  height: 522px;
-  position: relative;
-}
 
 /* @media(max-width: 768px) {
   /* body {
@@ -318,6 +306,7 @@ section.slider {
 }
 
 /* responsive*/
+
 @media screen and (max-width: 767px) {
   .slider .carousel-control-next,
   .slider .carousel-control-prev {
@@ -348,18 +337,4 @@ section.slider {
     grid-gap: 20px;
   }
 
-  /* body {
-    display: flex;
-    position: absolute;
-  } */
-
-  /* .bear-heading {
-    display: flex;
-    position: absolute;
-  }
-
-  .column-illustration-bear img {
-    display: flex;
-    position: absolute;
-  } */
 }
