--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,15 @@
 :root {
   --white-color: #ffffff;
+  --black-color: #000000;
+  --gray-color: #acacaa;
   --light-gray-one-color: #F0F0F0;
   --light-gray-two-color: #dbdbdb;
   --light-gray-three-color: #e0e0e0;
-  --black-color: #000000; 
   --light-blue-color: #00B4D8;
+  --light-blue-color-basic: #BFFFF0;
+  --light-blue-color-medium: #CAF0F8;
   --dark-blue-color: #3E497A;
+  --violet-color: #0b63dc;
 }
 
 * {
@@ -16,8 +20,8 @@
 
 body,
 html {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   scroll-behavior: smooth;
 }
 
