--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -28,13 +28,15 @@
 }
 
 .jumbotron .display-4 {
-    color: var(--light-blue-color);
+    color: var(--violet-color);
     margin-top: 150px;
     font-weight: 200;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
     font-size: 32px;
     margin-bottom: 30px;
     opacity: 0.8;
+    font-family: 'Dongle', sans-serif;
+    font-family: 'Fredoka One', cursive;
 }
 
 .jumbotron .display-4 span {
