--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -6,7 +6,7 @@
     top: 0;
     bottom: 0;
     overflow: auto;
-    z-index: 9999;
+    z-index: 1;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -27,7 +27,7 @@
 }
 
 .modalContainer {
-  width: 800px;
+  max-width: fit-content;
   border-radius: 26px 26px 26px 26px;
   -moz-border-radius: 26px 26px 26px 26px;
   -webkit-border-radius: 26px 26px 26px 26px;
@@ -42,6 +42,7 @@
 .modalContainer .title {
   display: inline-block;
   text-align: center;
+  font-weight: bold;
   margin-top: 10px;
 }
 
@@ -67,24 +68,6 @@
 .modal-form {
     text-align: left;    
     padding-left: 0;
-}
-
-.modalContainer .footer {
-  flex: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modalContainer .footer button {
-  width: 100%;
-  height: 50px;
-  display: block;
-  margin: 10px;
-  border: none;
-  color: var(--white-color);
-  border-radius: 8px;
-  cursor: pointer;
 }
 
 .wrap {
