Memperbaharui sedikit style card pada landing page

--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -43,6 +43,10 @@
     font-weight: 500;
 }
 
+.telusuri {
+    font-family: fantasy;
+}
+
 .telusuri:hover {
     background: var(--gray-color);
     color: var(--white-color);
