--- a/client/src/components/Information/Information.css
+++ b/client/src/components/Information/Information.css
@@ -1,8 +1,10 @@
 /* Info Panel */
 .info-panel {
     box-shadow: 0 1.2px 14px rgba(0, 0, 0, 0.2);
-    border-radius: 12px;
-    margin-top: -100px;
+    border-radius: 18px 18px 18px 18px;
+    -moz-border-radius: 18px 18px 18px 18px;
+    -webkit-border-radius: 18px 18px 18px 18px;
+    border: 0px solid #000000;    margin-top: -100px;
     background-color: var(--white-color);
     padding: 30px;
     z-index: 1;
