Memperbaiki responsive jumbotron

--- a/client/src/components/Information/Information.css
+++ b/client/src/components/Information/Information.css
@@ -4,9 +4,10 @@
     border-radius: 18px 18px 18px 18px;
     -moz-border-radius: 18px 18px 18px 18px;
     -webkit-border-radius: 18px 18px 18px 18px;
-    border: 0px solid #000000;    margin-top: -100px;
+    border: 0px solid var(--black-color);    
+    margin-top: -100px;
     background-color: var(--white-color);
-    padding: 30px;
+    padding:20px;
     z-index: 1;
 }
 
